// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinguish by props 1`] = `
Array [
  Array [
    "createNode",
    "a3c9e92c",
    "const",
  ],
  Array [
    "setProperty",
    "a3c9e92c",
    "value",
    2,
  ],
  Array [
    "createNode",
    "409874bc",
    "phasor",
  ],
  Array [
    "appendChild",
    "409874bc",
    "a3c9e92c",
  ],
  Array [
    "createNode",
    "d8f862f6",
    "const",
  ],
  Array [
    "setProperty",
    "d8f862f6",
    "value",
    0.5,
  ],
  Array [
    "createNode",
    "6982ed95",
    "le",
  ],
  Array [
    "appendChild",
    "6982ed95",
    "409874bc",
  ],
  Array [
    "appendChild",
    "6982ed95",
    "d8f862f6",
  ],
  Array [
    "createNode",
    "52536ff3",
    "seq",
  ],
  Array [
    "setProperty",
    "52536ff3",
    "seq",
    Array [
      0,
      0,
      1,
    ],
  ],
  Array [
    "appendChild",
    "52536ff3",
    "6982ed95",
  ],
  Array [
    "createNode",
    "1e3bd8aa",
    "sample",
  ],
  Array [
    "setProperty",
    "1e3bd8aa",
    "path",
    "test/path.wav",
  ],
  Array [
    "appendChild",
    "1e3bd8aa",
    "52536ff3",
  ],
  Array [
    "createNode",
    "8f5629b0",
    "root",
  ],
  Array [
    "setProperty",
    "8f5629b0",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "8f5629b0",
    "1e3bd8aa",
  ],
  Array [
    "createNode",
    "4eeaa773",
    "seq",
  ],
  Array [
    "setProperty",
    "4eeaa773",
    "seq",
    Array [
      0,
      1,
      0,
    ],
  ],
  Array [
    "appendChild",
    "4eeaa773",
    "6982ed95",
  ],
  Array [
    "createNode",
    "1ad3102a",
    "sample",
  ],
  Array [
    "setProperty",
    "1ad3102a",
    "path",
    "test/path.wav",
  ],
  Array [
    "appendChild",
    "1ad3102a",
    "4eeaa773",
  ],
  Array [
    "createNode",
    "9627c9b4",
    "root",
  ],
  Array [
    "setProperty",
    "9627c9b4",
    "channel",
    1,
  ],
  Array [
    "appendChild",
    "9627c9b4",
    "1ad3102a",
  ],
  Array [
    "activateRoots",
    Array [
      "8f5629b0",
      "9627c9b4",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`distinguished subtrees by key 1`] = `
Array [
  Array [
    "createNode",
    "21cb34fb",
    "const",
  ],
  Array [
    "setProperty",
    "21cb34fb",
    "value",
    6.283185307179586,
  ],
  Array [
    "createNode",
    "43b012fa",
    "const",
  ],
  Array [
    "setProperty",
    "43b012fa",
    "key",
    "fq1",
  ],
  Array [
    "setProperty",
    "43b012fa",
    "value",
    440,
  ],
  Array [
    "createNode",
    "3f02c2ec",
    "phasor",
  ],
  Array [
    "appendChild",
    "3f02c2ec",
    "43b012fa",
  ],
  Array [
    "createNode",
    "681824d6",
    "mul",
  ],
  Array [
    "appendChild",
    "681824d6",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "681824d6",
    "3f02c2ec",
  ],
  Array [
    "createNode",
    "3250f5dc",
    "sin",
  ],
  Array [
    "appendChild",
    "3250f5dc",
    "681824d6",
  ],
  Array [
    "createNode",
    "43b012f8",
    "const",
  ],
  Array [
    "setProperty",
    "43b012f8",
    "key",
    "fq2",
  ],
  Array [
    "setProperty",
    "43b012f8",
    "value",
    440,
  ],
  Array [
    "createNode",
    "3f02c2f0",
    "phasor",
  ],
  Array [
    "appendChild",
    "3f02c2f0",
    "43b012f8",
  ],
  Array [
    "createNode",
    "681824da",
    "mul",
  ],
  Array [
    "appendChild",
    "681824da",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "681824da",
    "3f02c2f0",
  ],
  Array [
    "createNode",
    "3250f5e0",
    "sin",
  ],
  Array [
    "appendChild",
    "3250f5e0",
    "681824da",
  ],
  Array [
    "createNode",
    "43b012f6",
    "const",
  ],
  Array [
    "setProperty",
    "43b012f6",
    "key",
    "fq3",
  ],
  Array [
    "setProperty",
    "43b012f6",
    "value",
    440,
  ],
  Array [
    "createNode",
    "3f02c2f4",
    "phasor",
  ],
  Array [
    "appendChild",
    "3f02c2f4",
    "43b012f6",
  ],
  Array [
    "createNode",
    "681824de",
    "mul",
  ],
  Array [
    "appendChild",
    "681824de",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "681824de",
    "3f02c2f4",
  ],
  Array [
    "createNode",
    "3250f5e4",
    "sin",
  ],
  Array [
    "appendChild",
    "3250f5e4",
    "681824de",
  ],
  Array [
    "createNode",
    "43b012f4",
    "const",
  ],
  Array [
    "setProperty",
    "43b012f4",
    "key",
    "fq4",
  ],
  Array [
    "setProperty",
    "43b012f4",
    "value",
    440,
  ],
  Array [
    "createNode",
    "3f02c2f8",
    "phasor",
  ],
  Array [
    "appendChild",
    "3f02c2f8",
    "43b012f4",
  ],
  Array [
    "createNode",
    "681824e2",
    "mul",
  ],
  Array [
    "appendChild",
    "681824e2",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "681824e2",
    "3f02c2f8",
  ],
  Array [
    "createNode",
    "3250f5e8",
    "sin",
  ],
  Array [
    "appendChild",
    "3250f5e8",
    "681824e2",
  ],
  Array [
    "createNode",
    "06759c60",
    "add",
  ],
  Array [
    "appendChild",
    "06759c60",
    "3250f5dc",
  ],
  Array [
    "appendChild",
    "06759c60",
    "3250f5e0",
  ],
  Array [
    "appendChild",
    "06759c60",
    "3250f5e4",
  ],
  Array [
    "appendChild",
    "06759c60",
    "3250f5e8",
  ],
  Array [
    "createNode",
    "bee2a244",
    "root",
  ],
  Array [
    "setProperty",
    "bee2a244",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "bee2a244",
    "06759c60",
  ],
  Array [
    "activateRoots",
    Array [
      "bee2a244",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`garbage collection 1`] = `
Array [
  Array [
    "createNode",
    "719116b3",
    "cos",
  ],
  Array [
    "appendChild",
    "719116b3",
    "c24efcbc",
  ],
  Array [
    "createNode",
    "0baa2931",
    "root",
  ],
  Array [
    "setProperty",
    "0baa2931",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "0baa2931",
    "719116b3",
  ],
  Array [
    "activateRoots",
    Array [
      "0baa2931",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`garbage collection 2`] = `
Array [
  Array [
    "deleteNode",
    "e6f0647c",
  ],
  Array [
    "deleteNode",
    "fded120c",
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`memo and keyed props 1`] = `
Array [
  Array [
    "createNode",
    "21cb34fb",
    "const",
  ],
  Array [
    "setProperty",
    "21cb34fb",
    "value",
    6.283185307179586,
  ],
  Array [
    "createNode",
    "38b6f7a4",
    "const",
  ],
  Array [
    "setProperty",
    "38b6f7a4",
    "key",
    "hi",
  ],
  Array [
    "setProperty",
    "38b6f7a4",
    "value",
    440,
  ],
  Array [
    "createNode",
    "54f4f998",
    "phasor",
  ],
  Array [
    "appendChild",
    "54f4f998",
    "38b6f7a4",
  ],
  Array [
    "createNode",
    "7e0a5b82",
    "mul",
  ],
  Array [
    "appendChild",
    "7e0a5b82",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "7e0a5b82",
    "54f4f998",
  ],
  Array [
    "createNode",
    "48432c88",
    "sin",
  ],
  Array [
    "appendChild",
    "48432c88",
    "7e0a5b82",
  ],
  Array [
    "createNode",
    "3b4781f4",
    "root",
  ],
  Array [
    "setProperty",
    "3b4781f4",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "3b4781f4",
    "48432c88",
  ],
  Array [
    "activateRoots",
    Array [
      "3b4781f4",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`memo and keyed props 2`] = `
Array [
  Array [
    "setProperty",
    "38b6f7a4",
    "value",
    880,
  ],
  Array [
    "activateRoots",
    Array [
      "3b4781f4",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`memo and keyed props 3`] = `
Array [
  Array [
    "setProperty",
    "38b6f7a4",
    "value",
    440,
  ],
  Array [
    "activateRoots",
    Array [
      "3b4781f4",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`multi-channel basics 1`] = `
Array [
  Array [
    "createNode",
    "21cb34fb",
    "const",
  ],
  Array [
    "setProperty",
    "21cb34fb",
    "value",
    6.283185307179586,
  ],
  Array [
    "createNode",
    "38b6f76e",
    "const",
  ],
  Array [
    "setProperty",
    "38b6f76e",
    "key",
    "fq",
  ],
  Array [
    "setProperty",
    "38b6f76e",
    "value",
    440,
  ],
  Array [
    "createNode",
    "54f4fa04",
    "phasor",
  ],
  Array [
    "appendChild",
    "54f4fa04",
    "38b6f76e",
  ],
  Array [
    "createNode",
    "7e0a5bee",
    "mul",
  ],
  Array [
    "appendChild",
    "7e0a5bee",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "7e0a5bee",
    "54f4fa04",
  ],
  Array [
    "createNode",
    "48432cf4",
    "sin",
  ],
  Array [
    "appendChild",
    "48432cf4",
    "7e0a5bee",
  ],
  Array [
    "createNode",
    "3b47811c",
    "root",
  ],
  Array [
    "setProperty",
    "3b47811c",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "3b47811c",
    "48432cf4",
  ],
  Array [
    "createNode",
    "3b479020",
    "root",
  ],
  Array [
    "setProperty",
    "3b479020",
    "channel",
    1,
  ],
  Array [
    "appendChild",
    "3b479020",
    "48432cf4",
  ],
  Array [
    "activateRoots",
    Array [
      "3b47811c",
      "3b479020",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`nested memo 1`] = `
Array [
  Array [
    "createNode",
    "1546557d",
    "const",
  ],
  Array [
    "createNode",
    "9bd63de6",
    "phasor",
  ],
  Array [
    "createNode",
    "d8f862f6",
    "const",
  ],
  Array [
    "createNode",
    "c226d4e8",
    "le",
  ],
  Array [
    "createNode",
    "46142b40",
    "const",
  ],
  Array [
    "createNode",
    "db1c1364",
    "mul",
  ],
  Array [
    "createNode",
    "0a90ff18",
    "pole",
  ],
  Array [
    "createNode",
    "b6abdcd4",
    "root",
  ],
  Array [
    "activateRoots",
    Array [
      "b6abdcd4",
    ],
  ],
]
`;

exports[`nested memo 2`] = `
Array [
  Array [
    "createNode",
    "154655bb",
    "const",
  ],
  Array [
    "createNode",
    "9bd63d6a",
    "phasor",
  ],
  Array [
    "createNode",
    "c22698d8",
    "le",
  ],
  Array [
    "createNode",
    "db1c8b84",
    "mul",
  ],
  Array [
    "createNode",
    "0a917738",
    "pole",
  ],
  Array [
    "createNode",
    "b6aaec94",
    "root",
  ],
  Array [
    "activateRoots",
    Array [
      "b6aaec94",
    ],
  ],
]
`;

exports[`numeric literals 1`] = `
Array [
  Array [
    "createNode",
    "21cb34fb",
    "const",
  ],
  Array [
    "setProperty",
    "21cb34fb",
    "value",
    6.283185307179586,
  ],
  Array [
    "createNode",
    "d8f49428",
    "const",
  ],
  Array [
    "setProperty",
    "d8f49428",
    "value",
    440,
  ],
  Array [
    "createNode",
    "75c31fb8",
    "phasor",
  ],
  Array [
    "appendChild",
    "75c31fb8",
    "d8f49428",
  ],
  Array [
    "createNode",
    "c24efcbc",
    "mul",
  ],
  Array [
    "appendChild",
    "c24efcbc",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "c24efcbc",
    "75c31fb8",
  ],
  Array [
    "createNode",
    "e6f0647c",
    "sin",
  ],
  Array [
    "appendChild",
    "e6f0647c",
    "c24efcbc",
  ],
  Array [
    "createNode",
    "fded120c",
    "root",
  ],
  Array [
    "setProperty",
    "fded120c",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "fded120c",
    "e6f0647c",
  ],
  Array [
    "activateRoots",
    Array [
      "fded120c",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`shared reference to composite node 1`] = `
Array [
  Array [
    "activateRoots",
    Array [
      "9ffdb79c",
      "0b013092",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`simple memo 1`] = `
Array [
  Array [
    "createNode",
    "8375719c",
    "tanh",
  ],
  Array [
    "appendChild",
    "8375719c",
    "06759c60",
  ],
  Array [
    "createNode",
    "1d8e841a",
    "root",
  ],
  Array [
    "setProperty",
    "1d8e841a",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "1d8e841a",
    "8375719c",
  ],
  Array [
    "activateRoots",
    Array [
      "1d8e841a",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`simple sharing 1`] = `
Array [
  Array [
    "createNode",
    "0012d7c6",
    "tanh",
  ],
  Array [
    "appendChild",
    "0012d7c6",
    "48432cf4",
  ],
  Array [
    "createNode",
    "cba82b78",
    "root",
  ],
  Array [
    "setProperty",
    "cba82b78",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "cba82b78",
    "0012d7c6",
  ],
  Array [
    "activateRoots",
    Array [
      "cba82b78",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`structural equality with value change 1`] = `
Array [
  Array [
    "setProperty",
    "43b012fa",
    "value",
    441,
  ],
  Array [
    "activateRoots",
    Array [
      "bee2a244",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`switch and switch back 1`] = `
Array [
  Array [
    "activateRoots",
    Array [
      "3b4781f4",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;

exports[`the basics 1`] = `
Array [
  Array [
    "createNode",
    "21cb34fb",
    "const",
  ],
  Array [
    "setProperty",
    "21cb34fb",
    "value",
    6.283185307179586,
  ],
  Array [
    "createNode",
    "38b6f76e",
    "const",
  ],
  Array [
    "setProperty",
    "38b6f76e",
    "key",
    "fq",
  ],
  Array [
    "setProperty",
    "38b6f76e",
    "value",
    440,
  ],
  Array [
    "createNode",
    "54f4fa04",
    "phasor",
  ],
  Array [
    "appendChild",
    "54f4fa04",
    "38b6f76e",
  ],
  Array [
    "createNode",
    "7e0a5bee",
    "mul",
  ],
  Array [
    "appendChild",
    "7e0a5bee",
    "21cb34fb",
  ],
  Array [
    "appendChild",
    "7e0a5bee",
    "54f4fa04",
  ],
  Array [
    "createNode",
    "48432cf4",
    "sin",
  ],
  Array [
    "appendChild",
    "48432cf4",
    "7e0a5bee",
  ],
  Array [
    "createNode",
    "3b47811c",
    "root",
  ],
  Array [
    "setProperty",
    "3b47811c",
    "channel",
    0,
  ],
  Array [
    "appendChild",
    "3b47811c",
    "48432cf4",
  ],
  Array [
    "activateRoots",
    Array [
      "3b47811c",
    ],
  ],
  Array [
    "commitUpdates",
  ],
]
`;
